--- a/.travis.yml
+++ b/.travis.yml
@@ -73,14 +73,22 @@ script:
 - helm list
 - helm delete $(helm list | grep DEPLOYED | awk '{print $1}')
 - kubectl delete pvc --all
+- bash docs/helm-charts/create-chart-variants.sh; # Create chart variants
+- helm lint pubsubplus
+- helm install pubsubplus --dry-run
+- helm lint pubsubplus-ha
+- helm install pubsubplus-ha --dry-run
+- helm lint pubsubplus-dev
+- helm install pubsubplus-dev --dry-run
+
 after_success:
 - echo "Test Success - Branch($TRAVIS_BRANCH) Pull Request($TRAVIS_PULL_REQUEST) Tag($TRAVIS_TAG)"
 - echo "YAML linted"
 - echo "GKE cluster deployment tested"
 - echo "Messaging tested"
+- echo "Chart ha and dev variants created and smoke-tested"
 - >
   if [ "$TRAVIS_PULL_REQUEST" = "false" ] && [ "$TRAVIS_BRANCH" = "HelmReorg" ]; then
-    bash docs/helm-charts/create-chart-variants.sh; # Create chart variants
     git config --global user.email "travis@travis-ci.org";
     git config --global user.name "travis-ci";
     mkdir gh-pages; # Now update gh-pages
