--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 - gcloud auth activate-service-account -q $(jq -r .client_email keyfile) --key-file=./keyfile
   --project  $(jq -r .project_id keyfile)
 - rm ./keyfile
-- export DESIRED_VERSION=v2.15.2; curl -sSL https://raw.githubusercontent.com/helm/helm/master/scripts/get
+- export DESIRED_VERSION=v2.16.0; curl -sSL https://raw.githubusercontent.com/helm/helm/master/scripts/get
   | bash
 install: true
 script:
@@ -39,8 +39,7 @@ script:
 - popd
 - kubectl -n kube-system create serviceaccount tiller
 - kubectl create clusterrolebinding tiller --clusterrole cluster-admin --serviceaccount=kube-system:tiller
-- helm init --service-account=tiller; kubectl rollout status -w deployment/tiller-deploy
-  -n kube-system
+- helm init --wait --service-account=tiller --upgrade
 - helm lint pubsubplus
 - helm install --set solace.size=dev,solace.redundancy=true,solace.usernameAdminPassword=admin
   --name my-release pubsubplus
