--- a/.travis.yml
+++ b/.travis.yml
@@ -32,17 +32,16 @@ script:
 - chmod 755 create_cluster.sh
 - "./create_cluster.sh -z us-east4-a,us-east4-b,us-east4-c -c $TESTCLUSTERNAME -m
   n1-standard-1"
-- kubectl get statefulset,svc,pods,pvc,pv
-- export SOLACE_KUBERNETES_QUICKSTART_REPO="$TRAVIS_REPO_SLUG"; export SOLACE_KUBERNETES_QUICKSTART_BRANCH="$TRAVIS_BRANCH"
 - gcloud container clusters get-credentials $TESTCLUSTERNAME --zone us-east4-a --project
   capable-stream-180018
 - popd
+- kubectl get statefulset,svc,pods,pvc,pv
 - kubectl -n kube-system create serviceaccount tiller
 - kubectl create clusterrolebinding tiller --clusterrole cluster-admin --serviceaccount=kube-system:tiller
 - helm init --wait --service-account=tiller --upgrade
+- helm version
 - helm lint pubsubplus
-- helm install --set solace.size=dev,solace.redundancy=true,solace.usernameAdminPassword=admin
-  --name my-release pubsubplus
+- helm install --set solace.size=dev,solace.redundancy=true,solace.usernameAdminPassword=admin --name my-release pubsubplus
 - kubectl get statefulset,svc,pods,pvc,pv --show-labels
 - echo "Waiting for cluster to become active"
 - travis_wait 30 sleep 1800 &
