--- a/pubsubplus/values.yaml
+++ b/pubsubplus/values.yaml
@@ -104,13 +104,8 @@ storage:
   #  false is not recommended for production use
   persistent: true
 
-  # storage.nfs=true specifies that an NFS storage is used. Default is false.
+  # storage.nfs=true specifies that an NFS storage is used. Default is false. Also provide storage.useStorageClass
   # nfs: true
-
-  # storage.existingClaim will be used to mount a persistent volume if specified and
-  #   the rest of the parameters including StorageClass and size will be ignored
-  # Note: can only use with solace.redundancy=false, a claim can only be associated to one PubSub+ pod
-  # existingClaim: my-existing-data-pvc
 
   # storage.useStorageClass will be used if specified, verify it exists using `kubectl get sc`.
   # If not defined, the deployment will try to use the default storage class for the k8s cluster.
