Enabled using a customVolumeMount for mounting PubSub+ data and also to provide custom service annotation

--- a/pubsubplus/templates/service.yaml
+++ b/pubsubplus/templates/service.yaml
@@ -8,6 +8,10 @@ metadata:
     release: {{ .Release.Name }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version }}
     app: {{ template "solace.name" . }}
+{{- if .Values.service.annotations }}
+  annotations:
+{{ toYaml .Values.service.annotations | indent 4 }}
+{{- end }}
 spec:
   type: {{.Values.service.type | default "LoadBalancer"}}
   ports:
