--- a/pubsubplus/Chart.yaml
+++ b/pubsubplus/Chart.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 description: Deploy Solace PubSub+ Message Broker Singleton or HA redundancy group onto a Kubernetes Cluster
 name: pubsubplus
-version: 2.0.0
+version: 1.0.0
 icon: https://solace.com/wp-content/uploads/2018/05/Solace_Logo_Green_360x100-1.png
 maintainers:
-  - name: Balazs Czoma
-    email: balazs.czoma@solace.com
-  - name: Ken Barr
-    email: ken.barr@solace.com
-  - name: Philippe Khalife
-    email: philippe.khalife@solace.com
-  - name: Solace Support
-    email: support@solace.com
+  - email: balazs.czoma@solace.com
+    name: bczoma
+  - email: ken.barr@solace.com
+    name: KenBarr
+  - email: philippe.khalife@solace.com
+    name: PhilippeKhalife
+  - email: support@solace.com
+    name: Solace Support
 home: https://dev.solace.com
 sources:
    - https://github.com/SolaceProducts/solace-kubernetes-quickstart
