--- a/pubsubplus/values.yaml
+++ b/pubsubplus/values.yaml
@@ -107,15 +107,15 @@ storage:
   #  false is not recommended for production use
   persistent: true
 
-  # storage.customVolumeMount enables specifying a yaml snippet how the data volume should be mounted.
+  # storage.customVolumeMount enables specifying a yaml fragment how the data volume should be mounted.
   #   If customVolumeMount is defined the rest of the storage params will be ignored
-  #   This example shows how to mount the PubSub+ data volume from an existing pvc "test-claim"
+  #   This example shows how to mount the PubSub+ data volume from an existing pvc "test-claim". Ensure to preserve indentation.
   # customVolumeMount: |
-  # persistentVolumeClaim:
-  #   claimName: test-claim
+  #   persistentVolumeClaim:
+  #     claimName: test-claim
 
-  # storage.nfs=true specifies that an NFS storage is used. Default is false. Also provide storage.useStorageClass
-  # nfs: true
+  # storage.slow=true to indicate slow storage used, must be set for NFS. Default is false.
+  # slow: true
 
   # storage.useStorageClass will be used if specified, verify it exists using `kubectl get sc`.
   # If not defined, the deployment will try to use the default storage class for the k8s cluster.
