--- a/pubsubplus/values.yaml
+++ b/pubsubplus/values.yaml
@@ -107,7 +107,7 @@ storage:
   #  false is not recommended for production use
   persistent: true
 
-  # storage.customVolumeMount enables specifying a yaml fragment how the data volume should be mounted.
+  # storage.customVolumeMount enables specifying a YAML fragment how the data volume should be mounted.
   #   If customVolumeMount is defined the rest of the storage params will be ignored
   #   This example shows how to mount the PubSub+ data volume from an existing pvc "test-claim". Ensure to preserve indentation.
   # customVolumeMount: |
