Updating template labels to latest recommendations

--- a/pubsubplus/templates/secret.yaml
+++ b/pubsubplus/templates/secret.yaml
@@ -3,10 +3,10 @@ kind: Secret
 metadata:
   name: {{ template "solace.fullname" . }}-secrets
   labels:
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version }}
-    app: {{ template "solace.name" . }}
+    app.kubernetes.io/name: {{ template "solace.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    helm.sh/chart: {{ .Chart.Name }}-{{ .Chart.Version }}
 type: Opaque
 data:
 {{ if .Values.solace.usernameAdminPassword }}
