--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ script:
 - helm init --wait --service-account=tiller --upgrade
 - helm version
 - helm lint pubsubplus
-- helm install --set solace.size=dev,solace.redundancy=true,solace.usernameAdminPassword=admin --name my-release pubsubplus
+- helm install --set image.repository=bczoma/solacetest,image.tag=100.0openshift_scc2.0.322,solace.size=dev,solace.redundancy=true,solace.usernameAdminPassword=admin --name my-release pubsubplus
 - kubectl get statefulset,svc,pods,pvc,pv --show-labels
 - echo "Waiting for cluster to become active"
 - travis_wait 30 sleep 1800 &
